# python-luxtronik

./: .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  LICENCE.rst  LICENSE.md  MANIFEST.in  NOTICE  NOTICE.md  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: coverage.yml  docs.yml  lint.yml  publish-to-pypi.yml  pylint.yml  pytest.yml
.github/workflows/scripts/docs/: gen-docs.py
.github/workflows/scripts/docs/templates/: docs.html  docs.jinja
licenses/: pyModbusTCP.LICENSE
luxtronik/: __init__.py  __main__.py  calculations.py  collections.py  common.py  compatibilities.py  constants.py  data_vector.py  datatypes.py  discover.py  lut.py  luxtronik.py  parameters.py  visibilities.py
luxtronik/cfi/: __init__.py  calculations.py  constants.py  interface.py  parameters.py  vector.py  visibilities.py
luxtronik/definitions/: __init__.py  calculations.py  holdings.py  inputs.py  parameters.py  visibilities.py
luxtronik/scripts/: __init__.py  discover_shi.py  dump.py  dump_changes.py  dump_luxtronik.py  dump_shi.py  performance_shi.py  update_screen.py  watch_cfi.py  watch_shi.py
luxtronik/shi/: README.md  __init__.py  common.py  constants.py  contiguous.py  definitions.py  holdings.py  inputs.py  interface.py  modbus.py  vector.py
scripts/: dump-changes.py  dump-luxtronik.py
tests/: test_Luxtronik.py  test_LuxtronikData.py  test_calculations.py  test_collections.py  test_common.py  test_compatibility.py  test_data_vector.py  test_datatypes.py  test_definition_list.py  test_definitions.py  test_discover.py  test_parameters.py  test_socket_interaction.py  test_visibilities.py
tests/cfi/: test_cfi_calculations.py  test_cfi_interface.py  test_cfi_parameters.py  test_cfi_vector.py  test_cfi_visibilities.py
tests/fake/: __init__.py  fake_common.py  fake_luxtronik.py  fake_modbus.py  fake_modbus_client.py  fake_shi_interface.py  fake_socket.py  fake_socket_interface.py  fake_update_screen.py
tests/scripts/: test_dump_cfi.py  test_dump_changes.py  test_dump_luxtronik.py  test_dump_shi.py  test_watch_cfi.py  test_watch_shi.py
tests/shi/: test_common.py  test_contiguous.py  test_definition_list.py  test_definitions.py  test_interface.py  test_modbus.py  test_shi_common.py  test_shi_contiguous.py  test_shi_definitions.py  test_shi_interface.py  test_shi_modbus.py  test_shi_vector.py  test_vector.py
